styles/portfolio.css
body {
  background-image: url("images/bg.png");
  background-repeat: no-repeat;
  background-size: auto;

  background-color: #1b1b1b;
  background-position: center center;
  margin: 0 auto;
  background-attachment: local;
  background-position: center;
}

p,
h1,
h6 {
  color: white;
  text-align: center;
  font-family: roboto;
}

h1 {
  font-size: 72px;
  font-weight: bold;
  line-height: 85px;
  letter-spacing: 4px;

  margin-top: 20px;
}
a.btn {
  background-color: ivory;
  font-family: montserrat;
  font-weight: 700;
  line-height: 17px;
  border-radius: 50px;
  padding: 18px 40px;
}
h6 {
  font-style: normal;
  text-align: center;
  font-size: 17px;
  line-height: 30px;
}
@media (max-width: 600px) {
  h1 {
    font-size: 40px;
  }
  a.btn {
    font-size: 12px;
    padding: 9px 20px;
  }
  h6 {
    font-size: 12px;
  }
}

p {
  font-size: 24px;
  font-weight: bold;
  padding-top: 2px;
  line-height: 29px;
  letter-spacing: 3px;
  text-align: center;
  padding-bottom: 10px;
}
.text {
  padding-top: 20px;
  text-align: center;
}

.white-btn {
  display: flex;
  justify-content: center;
  margin-top: 50px;
  margin-bottom: 300px;
}

.collapse {
  justify-content: flex-end;
}
.navbar-toggler-icon {
  color: white;
  border-color: white;
  background-color: white;
}
div.hero {
  margin-top: 240px;
  margin-bottom: 100px;
}

.car {
  max-width: 386px;
  max-height: 280px;
}
.room {
  max-width: 386px;
  max-height: 280px;
  margin: 0 40px;
}
.rocks {
  max-width: 300px;
  max-height: 280px;
}
.picture-container {
  max-width: 1440px;
  display: flex;

  padding-left: 125px;
  padding-right: 123px;
  justify-content: space-evenly;
}
.man {
  max-width: 300px;
  max-height: 280px;
}

.lake {
  max-width: 300px;
  max-height: 280px;
  margin: 0 40px;
}

.stairs {
  max-width: 472px;
  max-height: 280px;
}
.steve {
  max-width: 356px;
  max-height: 280px;
}

.street {
  max-width: 359px;
  max-height: 280px;
  margin: 0 40px;
}

.city {
  max-width: 369px;
  max-height: 280px;
}
.woman {
  max-width: 386px;
  max-height: 280px;
}

.eifel {
  max-width: 386px;
  max-height: 280px;
  margin: 0 40px;
}

.archi {
  max-width: 300px;
  max-height: 280px;
}

